Add Treegrid Example (pull #762)
For issue #132, adds an example of the treegrid pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2745,6 +2745,11 @@
     <section class="widget" id="treegrid">
       <h3>Treegrid</h3>
         <p>
+        <strong>NOTE:</strong> This section is not complete.
+        Development of content for this pattern is tracked by 
+        <a href="https://github.com/w3c/aria-practices/issues/91">issue 91.</a>
+      </p>
+        <p>
           A <a href="#treegrid" class="role-reference">treegrid</a> widget presents a hierarchical data grid consisting of tabular information that is editable or interactive.
           Any row in the hierarchy may have child rows, and rows with children may be expanded or collapsed to show or hide the children.
           For example, a hierarchical e-mail discussion list uses a <code>treegrid</code> to display messages and responses to that message, a message row with responses can be expanded to reveal the response messages.
@@ -2772,6 +2777,7 @@
             <a href="examples/treegrid/treegrid-1.html">Hierarchical E-mail list <code>treegrid</code> Example with three types of focus navigation</a>: Rows first, cells first and cells only interaction options.
           </li>
         </ul>
+      </section>
 
         <section class="notoc">
           <h4>Keyboard Interaction For Data Grids</h4>
@@ -2918,7 +2924,6 @@
           </ul>
           <p class="note">See <a href="#kbd_common_conventions"></a> for cut, copy, and paste key assignments.</p>
         </section>
-      </section>
 
       <section id="treegrid_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
@@ -2979,7 +2984,6 @@
           </li>
         </ul>
       </section>
-
    </section>
 
     <section class="widget" id="windowsplitter">
