Landmark Guidance: Emphasize that only perceivable content needs to be in landmark regions
Per issue #637, modified aria-practices.html and examples/landmarks/index.html so that where the language:
> all content
is used, it instead says:
> all perceivable content

This change was made in two places.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3122,7 +3122,7 @@
     <section>
       <h3>General Principles of Landmark Design</h3>
       <p>
-        Including <strong>all content</strong> on a page in one of its landmark regions
+        Including <strong>all perceivable content</strong> on a page in one of its landmark regions
         and giving each landmark region a semantically meaningful role
         is one of the most effective ways of ensuring assistive technology users will not overlook information that is relevant to their needs.
       </p>
