--- a/examples/landmarks/index.html
+++ b/examples/landmarks/index.html
@@ -51,7 +51,7 @@
             <p>This section is intended to assist designers, developers and quality assurance staff in defining and understanding the importance of logical, usable, and accessible layout for assistive technologies 
               using HTML5 sectioning elements and ARIA landmark roles.
             </p>
-            <p>Due to the complexity of today's web content, if using landmarks, <strong>all content</strong> should reside in a semantically meaningful landmark in order that content is not missed by the user.</p>
+            <p>Due to the complexity of today's web content, if using landmarks, <strong>all perceivable content</strong> should reside in a semantically meaningful landmark in order that content is not missed by the user.</p>
 
             <p style="font-weight: bold">Step 1: Identify the logical structure</p>
             <ul>
