--- a/aria-practices.html
+++ b/aria-practices.html
@@ -644,7 +644,7 @@
         <h4>Keyboard Interaction</h4>
         <ul>
           <li><kbd>Tab</kbd>: The textbox is in the page <kbd>Tab</kbd> sequence.</li>
-          <li>Note: The popup indicator icon or button (if present), the popup, and the popup descendants are excluded from the page <kbd>Tab</kbd> sequence. </li>
+          <li class="note">The popup indicator icon or button (if present), the popup, and the popup descendants are excluded from the page <kbd>Tab</kbd> sequence. </li>
         </ul>
         <h5>Textbox Keyboard Interaction</h5>
         <p>When focus is in the textbox:</p>
@@ -2510,8 +2510,8 @@
 
     <section class="widget" id="tooltip">
       <h3>Tooltip Widget</h3>
-      <p>
-        <strong>NOTE:</strong> This design pattern is work in progress; it does not yet have task force consensus.
+      <p class="ednote">
+        This design pattern is work in progress; it does not yet have task force consensus.
         Progress and discussions are captured in
         <a href="https://github.com/w3c/aria-practices/issues/128">issue 128.</a>
       </p>
@@ -2744,8 +2744,8 @@
 
     <section class="widget" id="treegrid">
       <h3>Treegrid</h3>
-        <p>
-        <strong>NOTE:</strong> This section is not complete.
+        <p class="ednote">
+        This section is not complete.
         Development of content for this pattern is tracked by 
         <a href="https://github.com/w3c/aria-practices/issues/91">issue 91.</a>
       </p>
@@ -2988,8 +2988,8 @@
 
     <section class="widget" id="windowsplitter">
       <h3>Window Splitter</h3>
-      <p>
-        <strong>NOTE:</strong> ARIA 1.1 introduced changes to the separator role so it behaves as a widget when focusable.
+      <p class="ednote">
+        ARIA 1.1 introduced changes to the separator role so it behaves as a widget when focusable.
         While this pattern has been revised to match the ARIA 1.1 specification, the task force will not complete its review until a functional example that matches the ARIA 1.1 specification is complete.
         Progress on this pattern is tracked by
         <a href="https://github.com/w3c/aria-practices/issues/129">issue 129.</a>
@@ -3708,7 +3708,7 @@
         <li>
           The selected element. Or, if there is no selected element, the first element.
           Widgets where this pattern is commonly implemented include radio groups, tabs, list boxes, and trees.
-          Note: For radio groups, this pattern is referring to the checked radio button; the selected state is not supported for radio buttons.
+          <p class="note">For radio groups, this pattern is referring to the checked radio button; the selected state is not supported for radio buttons.</p>
         </li>
 
         <li>
@@ -4141,7 +4141,7 @@
           <td>
             <ul>
               <li>Defines a cell's position with respect to the total number of columns within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.</li>
-              <li><strong>Note:</strong> Numbering starts with 1, not 0.</li>
+              <li class="note">Numbering starts with 1, not 0.</li>
             </ul>
           </td>
         </tr>
@@ -4150,7 +4150,7 @@
           <td>
             <ul>
               <li>Defines a cell's position with respect to the total number of rows within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.</li>
-              <li><strong>Note:</strong> Numbering starts with 1, not 0.</li>
+              <li class="note">Numbering starts with 1, not 0.</li>
             </ul>
           </td>
         </tr>
@@ -4481,8 +4481,8 @@
           &lt;/div&gt;
         </code>
       </pre>
-      <p>
-        <strong>Note:</strong> When using HTML <code>table</code> elements,
+      <p class="note">
+        When using HTML <code>table</code> elements,
         use the native semantics of the <code>th</code> and <code>td</code> elements to define row and column spans
         by using the <code>rowspan</code> and <code>colspan</code> attributes.
       </p>
@@ -4751,8 +4751,8 @@
 
   <section id="structural_roles">
     <h2>Structural Roles</h2>
-    <p>
-      <strong>NOTE:</strong> This is a new section.
+    <p class="ednote">
+      This is a new section.
       Please provide feedback in
       <a href="https://github.com/w3c/aria-practices/issues/739">issue 739.</a>
     </p>
