--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,13 +20,10 @@
   </section>
 
   <section id="sotd">
-    <p>
-      This is an editor's draft by the
-      <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
-      of the
-      <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
+  	<p>
+      This is a First Public <a href="https://www.w3.org/2018/Process-20180201/#RecsWD">Working Draft</a> of WAI-ARIA Authoring Practices 1.2 by the <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications (ARIA) Working Group</a>.
       It supports the
-      <a href="" class="specref">WAI-ARIA 1.2</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>]
+      <a href="" class="specref">WAI-ARIA 1.2</a> [[WAI-ARIA-1.2]]
       specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
     </p>
     <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.2. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
@@ -44,10 +41,11 @@
     </ul>
     <p>
       To comment,
-      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> ARIA Practices GitHub repository</a>,
-      or if that is not possible, send email to
+      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> aria-practices GitHub repository</a>,
+      or if that is not feasible, send email to
       <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.2">public-aria@w3.org</a>
       (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>).
+      In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria-practices/">publicly visible editors' draft</a>.
     </p>
   </section>
 
