--- a/aria-practices.html
+++ b/aria-practices.html
@@ -54,7 +54,7 @@
     <p>This section is <em>informative.</em></p>
     <p>
       WAI-ARIA Authoring Practices is a guide for understanding how to use
-      <cite><a href="https://www.w3.org/TR/wai-aria-1.2/">WAI-ARIA 1.2</a></cite> to create an accessible Rich Internet Application.
+      <cite><a href="https://www.w3.org/TR/wai-aria-1.2/">WAI-ARIA 1.2</a></cite> [[WAI-ARIA-1.2]] to create an accessible Rich Internet Application.
       It provides guidance on the appropriate application of WAI-ARIA, describes recommended WAI-ARIA usage patterns, and explains concepts behind them.
     </p>
     <p>
