Fix Listbox to refer to `option` when discussing activedescentant
A note to the Listbox pattern discusses `aria-activedescendant`, and
incorrectly referred to `treeitem` role, probably due to copy/paste
error from a identical note to the Tree View pattern, whereas
`listbox` uses the `option` role for its items.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1701,7 +1701,7 @@
           <li>DOM focus (the active element) is functionally distinct from the selected state. For more details, see <a href="#kbd_focus_vs_selection">this description of differences between focus and selection.</a></li>
           <li>
             The <code>listbox</code> role supports the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property,
-            which provides an alternative to moving DOM focus among <code>treeitem</code> elements when implementing keyboard navigation.
+            which provides an alternative to moving DOM focus among <code>option</code> elements when implementing keyboard navigation.
             For details, see <a href="#kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant</a>.
           </li>
           <li>
