fix: Markup issues flagged by validator

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -121,7 +121,7 @@
               </td>
             </tr>
             <tr data-test-id="group-aria-labelledby">
-              <th scope="row"</th>
+              <th scope="row"></th>
               <td><code>aria-labelledby</code></td>
               <td><code>div</code></td>
               <td>
