--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -102,7 +102,7 @@
             <li id="lb1-ny" role="option">New York</li>
             <li id="lb1-nc" role="option">North Carolina</li>
             <li id="lb1-nd" role="option">North Dakota</li>
-            <li id="lb1-nm" role="option">Northern Marianas Islands</li>
+            <li id="lb1-mp" role="option">Northern Marianas Islands</li>
             <li id="lb1-oh" role="option">Ohio</li>
             <li id="lb1-ok" role="option">Oklahoma</li>
             <li id="lb1-or" role="option">Oregon</li>
@@ -181,11 +181,11 @@
             </td>
           </tr>
           <tr data-test-id="textbox-text-edit">
-            <th><li>Standard single line text editing keys</th>
+            <th>Standard single line text editing keys</th>
             <td>
               <ul>
                 <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
-                <li>An HTML <code>input</code> with <code>type=<q>text</q></code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
+                <li>An HTML <code>input</code> with <code>type="text"</code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
               </ul>
             </td>
           </tr>
@@ -309,7 +309,7 @@
           <tr data-test-id="combobox-aria-autocomplete">
             <td></td>
             <th scope="row">
-              <code>aria-autocomplete=<q>both</q></code>
+              <code>aria-autocomplete="both"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the autocomplete behavior of the text input is to both show an inline completion string and suggest a list of possible values in a popup where the suggestions are related to the string that is present in the textbox.</td>
@@ -317,7 +317,7 @@
           <tr data-test-id="combobox-aria-haspopup">
             <td></td>
             <th scope="row">
-              <code>aria-haspopup=<q>true</q></code>
+              <code>aria-haspopup="true"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the combobox can popup another element to suggest values.</td>
@@ -325,7 +325,7 @@
           <tr data-test-id="combobox-aria-owns">
             <td></td>
             <th scope="row">
-              <code>aria-owns=<q>#IDREF</q></code>
+              <code>aria-owns="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>
@@ -338,7 +338,7 @@
           <tr data-test-id="combobox-aria-expanded">
             <td></td>
             <th scope="row">
-              <code>aria-expanded=<q>false</q></code>
+              <code>aria-expanded="false"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
@@ -346,7 +346,7 @@
           <tr data-test-id="combobox-aria-expanded">
             <td></td>
             <th scope="row">
-              <code>aria-expanded=<q>true</q></code>
+              <code>aria-expanded="true"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the popup element <strong>is</strong> displayed.</td>
@@ -354,7 +354,7 @@
           <tr data-test-id="combobox-aria-activedescendant">
             <td></td>
             <th scope="row">
-              <code>aria-activedescendant=<q>IDREF</q></code>
+              <code>aria-activedescendant="IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>
@@ -395,7 +395,7 @@
           <tr data-test-id="listbox-aria-label">
             <td></td>
             <th scope="row">
-              <code>aria-label=<q>States<q></code>
+              <code>aria-label="States"</code>
             </th>
             <td><code>ul</code></td>
             <td>Provides a label for the <code>listbox</code>.</td>
@@ -416,7 +416,7 @@
           <tr data-test-id="option-aria-selected">
             <td></td>
             <th scope="row">
-              <code>aria-selected=<q>true</q></code>
+              <code>aria-selected="true"</code>
             </th>
             <td><code>li</code></td>
             <td>
