--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -128,11 +128,11 @@
             </td>
           </tr>
           <tr>
-            <th><li>Standard single line text editing keys</th>
+            <th>Standard single line text editing keys</th>
             <td>
               <ul>
                 <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
-                <li>An HTML <code>input</code> with <code>type=<q>text</q></code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
+                <li>An HTML <code>input</code> with <code>type="text"</code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
               </ul>
             </td>
           </tr>
@@ -256,7 +256,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-autocomplete=<q>none</q></code>
+              <code>aria-autocomplete="none"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the suggestions in the combobox popup are not values that complete the current textbox input.</td>
@@ -264,7 +264,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-haspopup=<q>true</q></code>
+              <code>aria-haspopup="true"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the combobox can popup another element to suggest values.</td>
@@ -272,7 +272,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-owns=<q>#IDREF</q></code>
+              <code>aria-owns="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>
@@ -285,7 +285,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-expanded=<q>false</q></code>
+              <code>aria-expanded="false"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
@@ -293,7 +293,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-expanded=<q>true</q></code>
+              <code>aria-expanded="true"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the popup element <strong>is</strong> displayed.</td>
@@ -301,7 +301,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-activedescendant=<q>IDREF</q></code>
+              <code>aria-activedescendant="IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>
@@ -342,7 +342,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-label=<q>Previous Searches<q></code>
+              <code>aria-label="Previous Searches"</code>
             </th>
             <td><code>ul</code></td>
             <td>Provides a label for the <code>listbox</code>.</td>
@@ -363,7 +363,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>aria-selected=<q>true</q></code>
+              <code>aria-selected="true"</code>
             </th>
             <td><code>li</code></td>
             <td>
