--- a/examples/menubar/menubar-1/mb-about.html
+++ b/examples/menubar/menubar-1/mb-about.html
@@ -17,13 +17,13 @@
         <h2 id="overview">Overview</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
-        <h2 id="admin">Administration</a></li>
+        <h2 id="admin">Administration</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
-        <h2 id="facts">Facts</a></li>
+        <h2 id="facts">Facts</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
-        <h2 id="tours">Campus Tours</a></li>
+        <h2 id="tours">Campus Tours</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
     </main>
