--- a/examples/menubar/menubar-1/mb-arts.html
+++ b/examples/menubar/menubar-1/mb-arts.html
@@ -27,16 +27,16 @@
         <h2 id="perfoming-arts">Performing Arts</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
-        <h2 id="art-museum">Art Museum</a></li>
+        <h2 id="art-museum">Art Museum</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h2 id="history-museum">History Museum</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
-        <h2 id="union">Student Union</a></li>
+        <h2 id="union">Student Union</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
     </main>
 </body>
 
-</html> 
+</html>
