Address feedback on duplicate data-test-ids

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -182,7 +182,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="key-down-arrow">
+          <tr data-test-id="textbox-key-down-arrow">
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
@@ -196,7 +196,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="key-up-arrow">
+          <tr data-test-id="textbox-key-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
@@ -219,7 +219,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="key-escape">
+          <tr data-test-id="textbox-key-escape">
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
@@ -264,7 +264,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="key-escape">
+          <tr data-test-id="listbox-key-escape">
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
@@ -274,7 +274,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="key-down-arrow">
+          <tr data-test-id="listbox-key-down-arrow">
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
@@ -284,7 +284,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="key-up-arrow">
+          <tr data-test-id="listbox-key-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
