Updates to menubar-2 data-test-id

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -386,7 +386,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="menuitem-role">
+          <tr data-test-id="menubar-menuitem-role">
             <th scope="row">
               <code>menuitem</code>
             </th>
@@ -401,7 +401,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="menuitem-tabindex">
+          <tr data-test-id="menubar-menuitem-tabindex">
             <td></td>
             <th scope="row">
               <code>tabindex=&quot;-1&quot;</code>
@@ -414,7 +414,7 @@
               <strong>not</strong> part of the <kbd>Tab</kbd> sequence of the page.
             </td>
           </tr>
-          <tr data-test-id="menuitem-tabindex">
+          <tr data-test-id="menubar-menuitem-tabindex">
             <td></td>
             <th scope="row">
               <code>tabindex=&quot;0&quot;</code>
@@ -440,7 +440,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="menuitem-aria-haspopup">
+          <tr data-test-id="menubar-menuitem-aria-haspopup">
             <td></td>
             <th scope="row">
               <code>aria-haspopup=&quot;true&quot;</code>
@@ -452,7 +452,7 @@
               Indicates that the <code>menuitem</code> has a submenu.
             </td>
           </tr>
-          <tr data-test-id="menuitem-aria-expanded">
+          <tr data-test-id="menubar-menuitem-aria-expanded">
             <td></td>
             <th scope="row">
               <code>aria-expanded=&quot;true&quot;</code>
@@ -462,7 +462,7 @@
             </td>
             <td>Indicates the menu is open.</td>
           </tr>
-          <tr data-test-id="menuitem-aria-expanded">
+          <tr data-test-id="menubar-menuitem-aria-expanded">
             <td></td>
             <th scope="row">
               <code>aria-expanded=&quot;false&quot;</code>
@@ -516,7 +516,7 @@
             Defines an acessible name for the <code>menu</code>.
           </td>
         </tr>
-        <tr data-test-id="menuitem-role">
+        <tr data-test-id="submenu-menuitem-role">
           <th scope="row">
             <code>menuitem</code>
           </th>
@@ -531,7 +531,7 @@
             </ul>
           </td>
         </tr>
-        <tr data-test-id="menuitem-tabindex">
+        <tr data-test-id="submenu-menuitem-tabindex">
           <td></td>
           <th scope="row">
             <code>tabindex=&quot;-1&quot;</code>
@@ -543,7 +543,7 @@
             Makes the item focusable but <strong>not</strong> part of the page <kbd>tab</kbd> sequence.
           </td>
         </tr>
-        <tr data-test-id="menuitem-aria-disabled">
+        <tr data-test-id="submenu-menuitem-aria-disabled">
           <td></td>
           <th scope="row">
             <code>aria-disabled=&quot;false&quot;</code>
@@ -555,7 +555,7 @@
             Used on the font size "Smaller" and "Larger" options to indicate they are active.
           </td>
         </tr>
-        <tr data-test-id="menuitem-aria-disabled">
+        <tr data-test-id="submenu-menuitem-aria-disabled">
           <td></td>
           <th scope="row">
             <code>aria-disabled=&quot;true&quot;</code>
