Combobox 1.1 listbox and Layout Grid example pages: add data attribs for regression test script (pull #766)
* listbox-combo.html: add data-test-id
* grid/LayoutGrids.html: add data-test-id

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -182,7 +182,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="textbox-key-down-arrow">
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
@@ -196,7 +196,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="textbox-key-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
@@ -205,7 +205,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="key-enter">
             <th><kbd>Enter</kbd></th>
             <td>
               <ul>
@@ -219,7 +219,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="textbox-key-escape">
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
@@ -254,7 +254,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="key-enter">
             <th><kbd>Enter</kbd></th>
             <td>
               <ul>
@@ -264,7 +264,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="listbox-key-escape">
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
@@ -274,7 +274,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="listbox-key-down-arrow">
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
@@ -284,7 +284,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="listbox-key-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
@@ -294,19 +294,19 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="key-right-arrow">
             <th><kbd>Right Arrow</kbd></th>
             <td>Moves focus to the textbox and moves the editing cursor one character to the right.</td>
           </tr>
-          <tr>
+          <tr data-test-id="key-left-arrow">
             <th><kbd>Left Arrow</kbd></th>
             <td>Moves focus to the textbox and moves the editing cursor one character to the leftt.</td>
           </tr>
-          <tr>
+          <tr data-test-id="key-home">
             <th><kbd>Home</kbd></th>
             <td>Moves focus to the textbox and places the editing cursor at the beginning of the field.</td>
           </tr>
-          <tr>
+          <tr data-test-id="key-end">
             <th><kbd>End</kbd></th>
             <td>Moves focus to the textbox and places the editing cursor at the end of the field.</td>
           </tr>
@@ -341,7 +341,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="combobox-role">
             <th scope="row">
               <code>combobox</code>
             </th>
@@ -359,7 +359,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-haspopup">
             <td></td>
             <th scope="row">
               <code>aria-haspopup=<q>listbox</q></code>
@@ -372,7 +372,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-owns">
             <td></td>
             <th scope="row">
               <code>aria-owns=<q>IDREF</q></code>
@@ -385,7 +385,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-expanded">
             <td></td>
             <th scope="row">
               <code>aria-expanded=<q>false</q></code>
@@ -393,7 +393,7 @@
             <td><code>div</code></td>
             <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-expanded">
             <td></td>
             <th scope="row">
               <code>aria-expanded=<q>true</q></code>
@@ -414,7 +414,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="textbox-aria-labelledby">
             <td></td>
             <th scope="row">
               <code>id="string"</code>
@@ -427,7 +427,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-autocomplete-list">
             <td></td>
             <th scope="row">
               <code>aria-autocomplete=<q>list</q></code>
@@ -435,7 +435,7 @@
             <td><code>input[type="text"]</code></td>
             <td>Examples 1 and 2: Indicates that the autocomplete behavior of the text input is to suggest a list of possible values in a popup and that the suggestions are related to the string that is present in the textbox.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-autocomplete-both">
             <td></td>
             <th scope="row">
               <code>aria-autocomplete=<q>both</q></code>
@@ -443,7 +443,7 @@
             <td><code>input[type="text"]</code></td>
             <td>Example 3: Indicates that the autocomplete behavior of the text input is to both show an inline completion string and suggest a list of possible values in a popup where the suggestions are related to the string that is present in the textbox.</td>
           </tr>
-          <tr>
+          <tr data-test-id="textbox-aria-controls">
             <td></td>
             <th scope="row">
               <code>aria-controls=<q>IDREF</q></code>
@@ -461,7 +461,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="textbox-aria-activedescendant">
             <td></td>
             <th scope="row">
               <code>aria-activedescendant=<q>IDREF</q></code>
@@ -484,7 +484,7 @@
       <h3 id="rps_label_listbox">Listbox Popup</h3>
       <table aria-labelledby="rps_label_listbox rps_label" class="data attributes">
         <thead>
-          <tr>
+          <tr data-test-id="">
             <th scope="col">Role</th>
             <th scope="col">Attribute</th>
             <th scope="col">Element</th>
@@ -492,7 +492,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="listbox-role">
             <th scope="row">
               <code>listbox</code>
             </th>
@@ -502,7 +502,7 @@
             </td>
             <td>Identifies the <code>ul</code> element as a <code>listbox</code>.</td>
           </tr>
-          <tr>
+          <tr data-test-id="listbox-aria-labelledby">
             <td></td>
             <th scope="row">
               <code>aria-labelledby=<q>IDREF</q></code>
@@ -510,7 +510,7 @@
             <td><code>ul</code></td>
             <td>Provides a label for the <code>listbox</code> element of the combobox.</td>
           </tr>
-          <tr>
+          <tr data-test-id="option-role">
             <th scope="row">
               <code>option</code>
             </th>
@@ -523,7 +523,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="option-aria-selected">
             <td></td>
             <th scope="row">
               <code>aria-selected=<q>true</q></code>
