change li class="note" to p child of prev li

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -641,8 +641,8 @@
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
         <ul>
-          <li><kbd>Tab</kbd>: The textbox is in the page <kbd>Tab</kbd> sequence.</li>
-          <li class="note">The popup indicator icon or button (if present), the popup, and the popup descendants are excluded from the page <kbd>Tab</kbd> sequence. </li>
+          <li><kbd>Tab</kbd>: The textbox is in the page <kbd>Tab</kbd> sequence.
+          <p class="note">The popup indicator icon or button (if present), the popup, and the popup descendants are excluded from the page <kbd>Tab</kbd> sequence. </p></li>
         </ul>
         <h5>Textbox Keyboard Interaction</h5>
         <p>When focus is in the textbox:</p>
@@ -4138,8 +4138,8 @@
           <th><code>aria-colindex</code></th>
           <td>
             <ul>
-              <li>Defines a cell's position with respect to the total number of columns within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.</li>
-              <li class="note">Numbering starts with 1, not 0.</li>
+              <li>Defines a cell's position with respect to the total number of columns within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.
+              <p class="note">Numbering starts with 1, not 0.</p></li>
             </ul>
           </td>
         </tr>
@@ -4147,8 +4147,8 @@
           <th><code>aria-rowindex</code></th>
           <td>
             <ul>
-              <li>Defines a cell's position with respect to the total number of rows within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.</li>
-              <li class="note">Numbering starts with 1, not 0.</li>
+              <li>Defines a cell's position with respect to the total number of rows within a <code>table</code>, <code>grid</code>, or <code>treegrid</code>.
+              <p class="note">Numbering starts with 1, not 0.</p></li>
             </ul>
           </td>
         </tr>
