datepicker prototype finished2

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -46,9 +46,9 @@
 
         <div id="cal">
           <div class="header">
-            <span role="button" class="left button" id="prev">&lang;</span>
+            <span role="button" class="left button" id="prev" tabIndex="0" >&lang;</span>
             <span class="month-year" id="label"></span>
-            <span role="button" class="right button" id="next">&rang;</span> 
+            <span role="button" class="right button" id="next" tabIndex="0" >&rang;</span> 
           </div>
 
           <table id ="days">
