--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -414,7 +414,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="textbox-aria-labelledby">
+          <tr data-test-id="textbox-id">
             <td></td>
             <th scope="row">
               <code>id="string"</code>
