--- a/aria-practices.html
+++ b/aria-practices.html
@@ -45,7 +45,7 @@
       or if that is not feasible, send email to
       <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.2">public-aria@w3.org</a>
       (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>).
-      In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria-practices/">publicly visible editors' draft</a>.
+      In-progress updates to the document may be viewed in the <a href="https://w3c.github.io/aria-practices/">publicly visible editors' draft</a>.
     </p>
   </section>
 
@@ -3199,7 +3199,7 @@
             <li>The HTML5 <code>header</code> element defines a <code>banner</code> landmark when its context is the <code>body</code> element.</li>
 
             <li>
-              The HTML5 <code>header</code> element is not considered a <code>banner</code> landmark when it is descendant of any of following elements (see <a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility Mappings</a>):
+              The HTML5 <code>header</code> element is not considered a <code>banner</code> landmark when it is descendant of any of following elements (see <a href="https://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility Mappings</a>):
               <ul>
                 <li><code>article</code></li>
                 <li><code>aside</code></li>
@@ -3279,7 +3279,7 @@
             <li>The HTML5 <code>footer</code> element defines a <code>contentinfo</code> landmark when its context is the <code>body</code> element.</li>
 
             <li>
-              The HTML5 <code>footer</code> element is not considered a <code>contentinfo</code> landmark when it is descendant of any of following elements (see <a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility Mappings</a>):
+              The HTML5 <code>footer</code> element is not considered a <code>contentinfo</code> landmark when it is descendant of any of following elements (see <a href="https://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility Mappings</a>):
               <ul>
                 <li><code>article</code></li>
                 <li><code>aside</code></li>
