Treegrid Example: Revise Keyboard Table Note
In examples/treegrid/treegrid-1.html, made minor editorial revisions to the note that prefaces the table of keyboard command descriptions.

--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -201,9 +201,9 @@ document.addEventListener('DOMContentLoaded', function () {
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <p>
-      <strong>NOTE:</strong> The following table describes keyboard commands that move focus among grid cells.
-      In the examples on this page, some cells contain a single focusable widget, and if a cell contains a widget, the cell is not focusable; the widget receives focus instead of the cell.
-      So, when a description says a command moves focus to a cell, the command may either focus the cell or a widget inside the cell.     
+      <strong>NOTE:</strong> The following table includes descriptions of how keyboard commands move focus among cells and rows in the treegrid implementation on this page.
+      In the example on this page, some cells contain a single focusable widget, and if a cell contains a widget, the cell is not focusable; the widget receives focus instead of the cell.
+      So, when a keyboard command description says a command moves focus to a cell, the command may either focus the cell or a widget inside the cell.     
     </p>
      <table aria-labelledby="kbd_label" class="def">
       <thead>
